sup matt, you like my log commits?

--- a/src/exploration/exploring.ipynb
+++ b/src/exploration/exploring.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "id": "4d0df13c-9bc8-4ad3-975f-85c7278a723a",
    "metadata": {
     "tags": []
@@ -12,7 +12,11 @@
     "import pandas as pd\n",
     "import os\n",
     "import numpy as np\n",
+    "import psycopg2\n",
+    "from sqlalchemy import create_engine\n",
     "# import scipy.io\n",
+    "\n",
+    "test_file = '/app/res/test.csv'\n",
     "\n",
     "# file = '../../res/Combined_Flights_2021.parquet'\n",
     "# file = './res/Combined_Flights_2021.parquet'\n",
@@ -21,7 +25,7 @@
     "# print(list(csv_file.columns))\n",
     "# for line in list(csv_file.columns):\n",
     "#     print(line)\n",
-    "sample = pd.read_csv('../../res/test.csv', engine='pyarrow')\n",
+    "sample = pd.read_csv(test_file, engine='pyarrow')\n",
     "\n"
    ]
   },
@@ -38,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "id": "9a96e7bc",
    "metadata": {},
    "outputs": [
@@ -92,9 +96,7 @@
     "# for i in file:\n",
     "#     print(i)\n",
     "\n",
-    "\n",
-    "import psycopg2\n",
-    "from sqlalchemy import create_engine"
+    "\n"
    ]
   },
   {
