getting postgres service to work with jupyter lab

--- a/src/exploration/exploring.ipynb
+++ b/src/exploration/exploring.ipynb
@@ -2,18 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "4d0df13c-9bc8-4ad3-975f-85c7278a723a",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I'm loaded\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import os\n",
     "import numpy as np\n",
     "import psycopg2\n",
-    "from sqlalchemy import create_engine\n",
+    "# from sqlalchemy import create_engine, URL, MetaData\n",
     "# import scipy.io\n",
     "\n",
     "test_file = '/app/res/test.csv'\n",
@@ -26,12 +34,12 @@
     "# for line in list(csv_file.columns):\n",
     "#     print(line)\n",
     "sample = pd.read_csv(test_file, engine='pyarrow')\n",
-    "\n"
+    "print(\"I'm loaded\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "49b11ff2",
    "metadata": {},
    "outputs": [],
@@ -42,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "9a96e7bc",
    "metadata": {},
    "outputs": [
@@ -82,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "22198dd8",
    "metadata": {},
    "outputs": [],
@@ -101,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "68d62969",
    "metadata": {},
    "outputs": [],
@@ -112,6 +120,45 @@
     "# print(csv_file.columns)\n",
     "\n",
     "# pd.read_csv(file_csv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "0f1ff742",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 'testing'), (2, 'today')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#testing the postgresql server\n",
+    "# url_object = URL.create(\n",
+    "#     \"postgresql+psycopg2\",\n",
+    "#     username=\"postgres\",\n",
+    "#     password=\"postgres\",\n",
+    "#     host=\"flights-db\",\n",
+    "#     port=\"5432\",\n",
+    "#     database=\"flights\"\n",
+    "# )\n",
+    "\n",
+    "# db = create_engine(url_object)k\n",
+    "\n",
+    "# with db.connect() as conn:\n",
+    "#     s = \n",
+    "    # for row in conn.execute()\n",
+    "\n",
+    "conn_string = \"host='flights-db' dbname='flights' user='postgres' password='postgres'\"\n",
+    "with psycopg2.connect(conn_string) as conn:\n",
+    "    cursor = conn.cursor()\n",
+    "    cursor.execute(\"SELECT * FROM demo\")\n",
+    "    records = cursor.fetchall()\n",
+    "    print(records)"
    ]
   }
  ],
