minor changes made by matt before realizing he needs to switch branches

--- a/src/exploration/exploring.ipynb
+++ b/src/exploration/exploring.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "4d0df13c-9bc8-4ad3-975f-85c7278a723a",
    "metadata": {
     "tags": []
@@ -24,11 +24,11 @@
     "# from sqlalchemy import create_engine, URL, MetaData\n",
     "# import scipy.io\n",
     "\n",
-    "test_file = '/app/res/test.csv'\n",
+    "# test_file = '/app/res/test.csv'\n",
     "\n",
     "# file = '../../res/Combined_Flights_2021.parquet'\n",
     "# file = './res/Combined_Flights_2021.parquet'\n",
-    "# file_2022_6 = '/app/raw/Flights_2018_1.csv'\n",
+    "test_file = '/app/raw/Flights_2018_1.csv'\n",
     "# csv_file = pd.read_csv(file_2022_6, engine='pyarrow')\n",
     "# print(list(csv_file.columns))\n",
     "# for line in list(csv_file.columns):\n",
@@ -39,13 +39,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "49b11ff2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "457688\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sample = csv_file.sample(n = 100000)\n",
+    "# sample.to_csv(\"../../res/test.csv\", index=False)\n",
+    "print(len(sample.index))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "93bf80b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18149\n"
+     ]
+    }
+   ],
+   "source": [
+    "#get all the flights in the first file that either depart from or arrive to boston\n",
+    "bos_sample = sample.query('Origin == \"BOS\" or Dest == \"BOS\"')\n",
+    "#print the number of flights from or to boston \n",
+    "print(len(bos_sample.index))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "555aed6d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sample = csv_file.sample(n = 100000)\n",
-    "# sample.to_csv(\"../../res/test.csv\", index=False)"
+    "#what is the average delay time for the flights from boston"
    ]
   },
   {
