added some average calculations for boston for departure and arrival delay

--- a/src/exploration/exploring.ipynb
+++ b/src/exploration/exploring.ipynb
@@ -17,6 +17,9 @@
     }
    ],
    "source": [
+    "#Authors: Dan Blum, Matt Greene, Bram Zilzter\n",
+    "#Dataset: https://www.kaggle.com/datasets/robikscube/flight-delay-dataset-20182022?select=readme.md\n",
+    "\n",
     "import pandas as pd\n",
     "import os\n",
     "import numpy as np\n",
@@ -59,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "93bf80b7",
    "metadata": {},
    "outputs": [
@@ -80,12 +83,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "555aed6d",
+   "execution_count": 23,
+   "id": "1d3a0038",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#what is the average delay time for the flights from boston"
+    "#split into departures from boston and arrive to boston\n",
+    "bos_dep_sample = sample.query('Origin == \"BOS\"')\n",
+    "\n",
+    "bos_arr_sample = sample.query('Dest == \"BOS\"')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "555aed6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16.100909793661177\n",
+      "19.646845454004875\n",
+      "9.584023351402871\n",
+      "19.72437004825162\n"
+     ]
+    }
+   ],
+   "source": [
+    "#what is the average delay time for the flights to or from boston\n",
+    "\n",
+    "#departure delay: DepDelay - early departures as neg numbers\n",
+    "print(bos_sample['DepDelay'].mean())\n",
+    "\n",
+    "#DepDel15(15 minutes or more as boolean)\n",
+    "\n",
+    "\n",
+    "#DepDelayMinutes delays greater than 15 minutes - early departures set to 0\n",
+    "print(bos_sample['DepDelayMinutes'].mean())\n",
+    "\n",
+    "#Arrival Delay: ArrDelay - early has neg num\n",
+    "print(bos_sample['ArrDelay'].mean())\n",
+    "\n",
+    "# ArrDelayMinutes - arrival times, early set to 0\n",
+    "print(bos_sample['ArrDelayMinutes'].mean())\n",
+    "\n",
+    "#ArrDel15 - arrival times more than 15 minutes as boolean\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "fe572e04",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17.370546318289787\n",
+      "20.62565320665083\n",
+      "8.594404761904762\n",
+      "19.840595238095236\n"
+     ]
+    }
+   ],
+   "source": [
+    "#what is the average delay time for the flights from boston\n",
+    "\n",
+    "#departure delay: DepDelay - early departures as neg numbers\n",
+    "print(bos_dep_sample['DepDelay'].mean())\n",
+    "\n",
+    "#DepDel15(15 minutes or more as boolean)\n",
+    "\n",
+    "#DepDelayMinutes delays greater than 15 minutes - early departures set to 0\n",
+    "print(bos_dep_sample['DepDelayMinutes'].mean())\n",
+    "\n",
+    "#Arrival Delay: ArrDelay - early has neg num\n",
+    "print(bos_dep_sample['ArrDelay'].mean())\n",
+    "\n",
+    "# ArrDelayMinutes - arrival times, early set to 0\n",
+    "print(bos_dep_sample['ArrDelayMinutes'].mean())\n",
+    "\n",
+    "#ArrDel15 - arrival times more than 15 minutes as boolean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "5e6d7052",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14.827795641300465\n",
+      "18.66535667500298\n",
+      "10.575175867413854\n",
+      "19.607964707285085\n"
+     ]
+    }
+   ],
+   "source": [
+    "#what is the average delay time to the flights from boston\n",
+    "\n",
+    "#departure delay: DepDelay - early departures as neg numbers\n",
+    "print(bos_arr_sample['DepDelay'].mean())\n",
+    "\n",
+    "#DepDel15(15 minutes or more as boolean)\n",
+    "\n",
+    "\n",
+    "#DepDelayMinutes delays greater than 15 minutes - early departures set to 0\n",
+    "print(bos_arr_sample['DepDelayMinutes'].mean())\n",
+    "\n",
+    "#Arrival Delay: ArrDelay - early has neg num\n",
+    "print(bos_arr_sample['ArrDelay'].mean())\n",
+    "\n",
+    "# ArrDelayMinutes - arrival times, early set to 0\n",
+    "print(bos_arr_sample['ArrDelayMinutes'].mean())\n",
+    "\n",
+    "#ArrDel15 - arrival times more than 15 minutes as boolean"
    ]
   },
   {
