looking at datatypes for date and format

--- a/src/exploration/exploring.ipynb
+++ b/src/exploration/exploring.ipynb
@@ -75,6 +75,7 @@
     }
    ],
    "source": [
+    "####### START OF EDA#####\n",
     "#get all the flights in the first file that either depart from or arrive to boston\n",
     "bos_sample = sample.query('Origin == \"BOS\" or Dest == \"BOS\"')\n",
     "#print the number of flights from or to boston \n",
@@ -83,20 +84,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "id": "1d3a0038",
    "metadata": {},
    "outputs": [],
    "source": [
     "#split into departures from boston and arrive to boston\n",
-    "bos_dep_sample = sample.query('Origin == \"BOS\"')\n",
+    "bos_dep_sample = bos_sample.query('Origin == \"BOS\"')\n",
     "\n",
-    "bos_arr_sample = sample.query('Dest == \"BOS\"')"
+    "bos_arr_sample = bos_sample.query('Dest == \"BOS\"')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "id": "555aed6d",
    "metadata": {},
    "outputs": [
@@ -171,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "id": "5e6d7052",
    "metadata": {},
    "outputs": [
@@ -296,6 +297,7 @@
     }
    ],
    "source": [
+    "###### Dan's adding files to postgres ######\n",
     "#testing the postgresql server\n",
     "# url_object = URL.create(\n",
     "#     \"postgresql+psycopg2\",\n",
