added block to check the duplicate field

--- a/src/exploration/exploring.ipynb
+++ b/src/exploration/exploring.ipynb
@@ -42,27 +42,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "id": "49b11ff2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "457688\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# sample = csv_file.sample(n = 100000)\n",
     "# sample.to_csv(\"../../res/test.csv\", index=False)\n",
-    "print(len(sample.index))"
+    "# sample.head(3).to_csv(\"res/sample.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
+   "id": "cb4a03fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# single_sample = csv_file(n = 100000)\n",
+    "# sample.to_csv(\"../../res/test.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "id": "93bf80b7",
    "metadata": {},
    "outputs": [
@@ -75,11 +78,58 @@
     }
    ],
    "source": [
-    "####### START OF EDA#####\n",
+    "####### START OF EDA #######\n",
     "#get all the flights in the first file that either depart from or arrive to boston\n",
     "bos_sample = sample.query('Origin == \"BOS\" or Dest == \"BOS\"')\n",
     "#print the number of flights from or to boston \n",
     "print(len(bos_sample.index))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "b610bfc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('O')"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bos_sample.dtypes\n",
+    "###Flight date is actually in ISO 8601 format(YYYYMMDD), pandas doesn't recognize it, we can probably drop Year, Quarter, Month, DayofMonth, DayofWeek\n",
+    "bos_sample.FlightDate.dtype #need to give input format for ISO 8601 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "ebc993a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "N    18149\n",
+       "Name: Duplicate, dtype: int64"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "####### Check for duplicates #######\n",
+    "# bos_sample.groupby('Duplicate').count()\n",
+    "bos_sample['Duplicate'].value_counts()"
    ]
   },
   {
