--- a/src/exploration/exploring.ipynb
+++ b/src/exploration/exploring.ipynb
@@ -2,17 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 57,
    "id": "4d0df13c-9bc8-4ad3-975f-85c7278a723a",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I'm loaded\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'matplotlib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[57], line 8\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpsycopg2\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[39m# from sqlalchemy import create_engine, URL, MetaData\u001b[39;00m\n\u001b[1;32m     10\u001b[0m \u001b[39m# import scipy.io\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[39m# file = '../../res/Combined_Flights_2021.parquet'\u001b[39;00m\n\u001b[1;32m     15\u001b[0m \u001b[39m# file = './res/Combined_Flights_2021.parquet'\u001b[39;00m\n\u001b[1;32m     16\u001b[0m test_file \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m/app/raw/Flights_2018_1.csv\u001b[39m\u001b[39m'\u001b[39m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'matplotlib'"
      ]
     }
    ],
@@ -24,6 +28,7 @@
     "import os\n",
     "import numpy as np\n",
     "import psycopg2\n",
+    "import matplotlib.pyplot as plt\n",
     "# from sqlalchemy import create_engine, URL, MetaData\n",
     "# import scipy.io\n",
     "\n",
@@ -260,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "id": "9a96e7bc",
    "metadata": {},
    "outputs": [
@@ -268,24 +273,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[2018 1 1 5 5 datetime.date(2018, 1, 5) 'B6' 'B6' 20409 'B6' 797 '' nan\n",
-      "  '' nan 'B6' 20409 'B6' 'N663JB' 797 10721 1072102 30721 'BOS'\n",
-      "  'Boston, MA' 'MA' 25 'Massachusetts' 13 10397 1039707 30397 'ATL'\n",
-      "  'Atlanta, GA' 'GA' 13 'Georgia' 34 1607 1902.0 175.0 175.0 1.0 11.0\n",
-      "  '1600-1659' 29.0 1931.0 2150.0 8.0 1907 2158.0 171.0 171.0 1.0 11.0\n",
-      "  '1900-1959' 0.0 '' 0.0 180.0 176.0 139.0 1.0 946.0 4 171.0 0.0 0.0 0.0\n",
+      "[[2018 1 1 2 2 datetime.date(2018, 1, 2) 'DL' 'DL_CODESHARE' 19790 'DL'\n",
+      "  3300 '' nan '' nan '9E' 20363 '9E' 'N300PQ' 3300 11193 1119302 33105\n",
+      "  'CVG' 'Cincinnati, OH' 'KY' 21 'Kentucky' 52 10721 1072102 30721 'BOS'\n",
+      "  'Boston, MA' 'MA' 25 'Massachusetts' 13 910 1041.0 91.0 91.0 1.0 6.0\n",
+      "  '0900-0959' 15.0 1056.0 1237.0 10.0 1119 1247.0 88.0 88.0 1.0 5.0\n",
+      "  '1100-1159' 0.0 '' 0.0 129.0 126.0 101.0 1.0 752.0 4 88.0 0.0 0.0 0.0\n",
       "  0.0 nan nan nan 0 nan nan nan nan '' nan nan nan nan nan nan '' '' nan\n",
       "  nan nan nan nan nan '' None None None None None None None None None\n",
       "  None None None None None None None None None None None None None None\n",
       "  None 'N' None]\n",
-      " [2018 1 1 10 3 datetime.date(2018, 1, 10) 'B6' 'B6' 20409 'B6' 504 ''\n",
-      "  nan '' nan 'B6' 20409 'B6' 'N629JB' 504 12954 1295406 32575 'LGB'\n",
-      "  'Long Beach, CA' 'CA' 6 'California' 91 10721 1072102 30721 'BOS'\n",
-      "  'Boston, MA' 'MA' 25 'Massachusetts' 13 2115 2116.0 1.0 1.0 0.0 0.0\n",
-      "  '2100-2159' 9.0 2125.0 517.0 5.0 529 522.0 -7.0 0.0 0.0 -1.0\n",
-      "  '0001-0559' 0.0 '' 0.0 314.0 306.0 292.0 1.0 2602.0 11 nan nan nan nan\n",
-      "  nan nan nan nan 0 nan nan nan nan '' nan nan nan nan nan nan '' '' nan\n",
-      "  nan nan nan nan nan '' None None None None None None None None None\n",
+      " [2018 1 1 3 3 datetime.date(2018, 1, 3) 'DL' 'DL_CODESHARE' 19790 'DL'\n",
+      "  3303 '' nan '' nan '9E' 20363 '9E' 'N905XJ' 3303 14492 1449202 34492\n",
+      "  'RDU' 'Raleigh/Durham, NC' 'NC' 37 'North Carolina' 36 10721 1072102\n",
+      "  30721 'BOS' 'Boston, MA' 'MA' 25 'Massachusetts' 13 1420 1423.0 3.0 3.0\n",
+      "  0.0 0.0 '1400-1459' 12.0 1435.0 1559.0 6.0 1619 1605.0 -14.0 0.0 0.0\n",
+      "  -1.0 '1600-1659' 0.0 '' 0.0 119.0 102.0 84.0 1.0 612.0 3 nan nan nan\n",
+      "  nan nan nan nan nan 0 nan nan nan nan '' nan nan nan nan nan nan '' ''\n",
+      "  nan nan nan nan nan nan '' None None None None None None None None None\n",
       "  None None None None None None None None None None None None None None\n",
       "  None 'N' None]]\n"
      ]
@@ -296,6 +301,192 @@
     "# sample['Origin']\n",
     "# sample['OriginAirportSeqID']\n",
     "print(bos[0:2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "7f1aeeba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bos_sample.Flights.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "fd859877",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.0       1291\n",
+       "2.0       1290\n",
+       "1.0       1262\n",
+       "4.0       1246\n",
+       "5.0       1225\n",
+       "          ... \n",
+       "777.0        1\n",
+       "822.0        1\n",
+       "529.0        1\n",
+       "1287.0       1\n",
+       "1118.0       1\n",
+       "Name: CarrierDelay, Length: 708, dtype: int64"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_carr_delay = sample.query('CarrierDelay != 0.0')\n",
+    "sample_carr_delay['CarrierDelay'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "675d09d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.0      149\n",
+       "7.0      144\n",
+       "6.0      138\n",
+       "9.0      134\n",
+       "15.0     132\n",
+       "        ... \n",
+       "315.0      1\n",
+       "475.0      1\n",
+       "527.0      1\n",
+       "973.0      1\n",
+       "878.0      1\n",
+       "Name: WeatherDelay, Length: 476, dtype: int64"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_weath_delay = sample.query('WeatherDelay != 0.0')\n",
+    "sample_weath_delay['WeatherDelay'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "9e0a4c17",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0       1616\n",
+       "15.0      1563\n",
+       "16.0      1430\n",
+       "2.0       1390\n",
+       "3.0       1291\n",
+       "          ... \n",
+       "1180.0       1\n",
+       "492.0        1\n",
+       "239.0        1\n",
+       "743.0        1\n",
+       "368.0        1\n",
+       "Name: NASDelay, Length: 375, dtype: int64"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_nas_delay = sample.query('NASDelay != 0.0')\n",
+    "sample_nas_delay['NASDelay'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "0c328d0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16.0    11\n",
+       "4.0     10\n",
+       "10.0    10\n",
+       "18.0     9\n",
+       "15.0     8\n",
+       "        ..\n",
+       "76.0     1\n",
+       "56.0     1\n",
+       "66.0     1\n",
+       "96.0     1\n",
+       "39.0     1\n",
+       "Name: SecurityDelay, Length: 74, dtype: int64"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_sec_delay = sample.query('SecurityDelay != 0.0')\n",
+    "sample_sec_delay['SecurityDelay'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "63d376ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15.0      945\n",
+       "16.0      938\n",
+       "17.0      928\n",
+       "18.0      842\n",
+       "19.0      770\n",
+       "         ... \n",
+       "981.0       1\n",
+       "1379.0      1\n",
+       "656.0       1\n",
+       "746.0       1\n",
+       "280.0       1\n",
+       "Name: LateAircraftDelay, Length: 493, dtype: int64"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_lac_delay = sample.query('LateAircraftDelay != 0.0')\n",
+    "sample_lac_delay['LateAircraftDelay'].value_counts()"
    ]
   },
   {
