change param grid

--- a/src/exploration/model_exploration.ipynb
+++ b/src/exploration/model_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 120,
    "id": "4ed3dbc2-4b13-4c7c-a595-99145a59f811",
    "metadata": {},
    "outputs": [],
@@ -19,14 +19,14 @@
     "\n",
     "test_file = '/app/raw/Flights_2018_1.csv'\n",
     "\n",
-    "df = pd.read_csv(test_file, nrows=100)\n",
+    "df = pd.read_csv(test_file, nrows=1000)\n",
     "# for col in df:\n",
     "#     print(col)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 121,
    "id": "37431acb",
    "metadata": {},
    "outputs": [
@@ -58,10 +58,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "id": "2291000d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/mamba/lib/python3.11/site-packages/sklearn/svm/_base.py:1244: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n",
+      "/mamba/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/mamba/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/mamba/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/mamba/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/mamba/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/mamba/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/mamba/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/mamba/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/mamba/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/mamba/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/mamba/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/mamba/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/mamba/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/mamba/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/mamba/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/mamba/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/mamba/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/mamba/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/mamba/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/mamba/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/mamba/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/mamba/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/mamba/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/mamba/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/mamba/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/mamba/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/mamba/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/mamba/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/mamba/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/mamba/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/mamba/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/mamba/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/mamba/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/mamba/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/mamba/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/mamba/lib/python3.11/site-packages/sklearn/model_selection/_validation.py:378: FitFailedWarning: \n",
+      "35 fits failed out of a total of 140.\n",
+      "The score on these train-test partitions for these parameters will be set to nan.\n",
+      "If these failures are not expected, you can try to debug them by setting error_score='raise'.\n",
+      "\n",
+      "Below are more details about the failures:\n",
+      "--------------------------------------------------------------------------------\n",
+      "35 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/mamba/lib/python3.11/site-packages/sklearn/model_selection/_validation.py\", line 686, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"/mamba/lib/python3.11/site-packages/sklearn/linear_model/_logistic.py\", line 1291, in fit\n",
+      "    fold_coefs_ = Parallel(n_jobs=self.n_jobs, verbose=self.verbose, prefer=prefer)(\n",
+      "                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/mamba/lib/python3.11/site-packages/sklearn/utils/parallel.py\", line 63, in __call__\n",
+      "    return super().__call__(iterable_with_config)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/mamba/lib/python3.11/site-packages/joblib/parallel.py\", line 1085, in __call__\n",
+      "    if self.dispatch_one_batch(iterator):\n",
+      "       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/mamba/lib/python3.11/site-packages/joblib/parallel.py\", line 901, in dispatch_one_batch\n",
+      "    self._dispatch(tasks)\n",
+      "  File \"/mamba/lib/python3.11/site-packages/joblib/parallel.py\", line 819, in _dispatch\n",
+      "    job = self._backend.apply_async(batch, callback=cb)\n",
+      "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/mamba/lib/python3.11/site-packages/joblib/_parallel_backends.py\", line 208, in apply_async\n",
+      "    result = ImmediateResult(func)\n",
+      "             ^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/mamba/lib/python3.11/site-packages/joblib/_parallel_backends.py\", line 597, in __init__\n",
+      "    self.results = batch()\n",
+      "                   ^^^^^^^\n",
+      "  File \"/mamba/lib/python3.11/site-packages/joblib/parallel.py\", line 288, in __call__\n",
+      "    return [func(*args, **kwargs)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/mamba/lib/python3.11/site-packages/joblib/parallel.py\", line 288, in <listcomp>\n",
+      "    return [func(*args, **kwargs)\n",
+      "            ^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/mamba/lib/python3.11/site-packages/sklearn/utils/parallel.py\", line 123, in __call__\n",
+      "    return self.function(*args, **kwargs)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/mamba/lib/python3.11/site-packages/sklearn/linear_model/_logistic.py\", line 521, in _logistic_regression_path\n",
+      "    alpha = (1.0 / C) * (1 - l1_ratio)\n",
+      "                         ~~^~~~~~~~~~\n",
+      "TypeError: unsupported operand type(s) for -: 'int' and 'NoneType'\n",
+      "\n",
+      "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
+      "/mamba/lib/python3.11/site-packages/sklearn/model_selection/_search.py:952: UserWarning: One or more of the test scores are non-finite: [0.94943621 0.94944553 0.94945485 0.94945485 0.94944553 0.94945485\n",
+      " 0.94945485 0.94945485 0.94945485 0.94945485 0.94945485 0.94945485\n",
+      " 0.94945485 0.94945485 0.93166527        nan 0.93166527        nan\n",
+      " 0.93166527        nan 0.93166527        nan 0.93166527        nan\n",
+      " 0.93166527        nan 0.93166527        nan]\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grid search found best model solver: liblinear\n",
+      "Grid search found best penalty: l1\n",
+      "Grid search found best hyperparameter C: 0.5\n",
+      "Test accuracy: 0.9453551912568307\n",
+      "Train accuracy: 0.9508196721311475\n"
+     ]
+    }
+   ],
    "source": [
     "log_reg = LogisticRegression()\n",
     "\n",
@@ -70,7 +212,8 @@
     "#   {'solver':[''],'C':[.01, .5, 1, 5, 10, 100, 1000], 'penalty':['l1','l2','elasticnet']},\n",
     "# ]\n",
     "param_grid = [\n",
-    "  {'solver':['liblinear', 'saga'],'C':[.01, .5, 1, 5, 10, 100, 1000], 'penalty':['l1','l2','elasticnet']},\n",
+    "  {'solver':['liblinear'],'C':[.01, .5, .1, 1, 5, 10, 100], 'penalty':['l1','l2']},\n",
+    "  {'solver':['saga'],'C':[.01, .5, .1, 1, 5, 10, 100], 'penalty':['l2','elasticnet']} # l1 gives erros here\n",
     "]\n",
     "\n",
     "search = GridSearchCV(log_reg, param_grid, cv=5) # TODO how to choose cv\n",
@@ -93,59 +236,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "id": "42553e3e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/mamba/lib/python3.11/site-packages/sklearn/model_selection/_validation.py:378: FitFailedWarning: \n",
-      "70 fits failed out of a total of 350.\n",
-      "The score on these train-test partitions for these parameters will be set to nan.\n",
-      "If these failures are not expected, you can try to debug them by setting error_score='raise'.\n",
-      "\n",
-      "Below are more details about the failures:\n",
-      "--------------------------------------------------------------------------------\n",
-      "28 fits failed with the following error:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/mamba/lib/python3.11/site-packages/sklearn/model_selection/_validation.py\", line 686, in _fit_and_score\n",
-      "    estimator.fit(X_train, y_train, **fit_params)\n",
-      "  File \"/mamba/lib/python3.11/site-packages/sklearn/pipeline.py\", line 405, in fit\n",
-      "    self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "  File \"/mamba/lib/python3.11/site-packages/sklearn/svm/_base.py\", line 217, in fit\n",
-      "    raise ValueError(\n",
-      "ValueError: Precomputed matrix must be a square matrix. Input is a 585x5 matrix.\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "42 fits failed with the following error:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/mamba/lib/python3.11/site-packages/sklearn/model_selection/_validation.py\", line 686, in _fit_and_score\n",
-      "    estimator.fit(X_train, y_train, **fit_params)\n",
-      "  File \"/mamba/lib/python3.11/site-packages/sklearn/pipeline.py\", line 405, in fit\n",
-      "    self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "  File \"/mamba/lib/python3.11/site-packages/sklearn/svm/_base.py\", line 217, in fit\n",
-      "    raise ValueError(\n",
-      "ValueError: Precomputed matrix must be a square matrix. Input is a 586x5 matrix.\n",
-      "\n",
-      "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
-      "/mamba/lib/python3.11/site-packages/sklearn/model_selection/_search.py:952: UserWarning: One or more of the test scores are non-finite: [0.90712888 0.87296617 0.84017333 0.84154319        nan 0.90712888\n",
-      " 0.85657441 0.84017333 0.84017333        nan 0.94807567 0.92485323\n",
-      " 0.94259622 0.91668064        nan 0.94807567 0.9084801  0.94122635\n",
-      " 0.91394092        nan 0.95217594 0.93440499 0.9439754  0.90027956\n",
-      "        nan 0.95217594 0.91804119 0.94260554 0.91666201        nan\n",
-      " 0.94943621 0.94123567 0.9425869  0.89753052        nan 0.94943621\n",
-      " 0.93577486 0.94533594 0.89349548        nan 0.94943621 0.94124499\n",
-      " 0.94669649 0.87712236        nan 0.94943621 0.94124499 0.94395676\n",
-      " 0.88530426        nan 0.94943621 0.94123567 0.94532662 0.8689125\n",
-      "        nan 0.94943621 0.9371354  0.94669649 0.88255521        nan\n",
-      " 0.94943621 0.94396608 0.94669649 0.8689125         nan 0.94943621\n",
-      " 0.94668717 0.94804771 0.88392508        nan]\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# NOTE THIS TAKES A FEW MIN TO RUN\n",
     "\n",
