--- a/src/exploration/exploring.ipynb
+++ b/src/exploration/exploring.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 134,
    "id": "4d0df13c-9bc8-4ad3-975f-85c7278a723a",
    "metadata": {
     "tags": []
@@ -25,6 +25,7 @@
     "import numpy as np\n",
     "import psycopg2\n",
     "import matplotlib.pyplot as plt\n",
+    "import sklearn\n",
     "# from sqlalchemy import create_engine, URL, MetaData\n",
     "# import scipy.io\n",
     "\n",
@@ -43,13 +44,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 132,
    "id": "49b11ff2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sample = csv_file.sample(n = 100000)\n",
-    "# sample.to_csv(\"../../res/test.csv\", index=False)\n",
+    "# bram_sample = sample.sample(n = 50)\n",
+    "# bram_sample.to_csv(\"res/bram_sample.csv\", index=False)\n",
     "# sample.head(3).to_csv(\"res/sample.csv\")"
    ]
   },
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 133,
    "id": "93bf80b7",
    "metadata": {},
    "outputs": [
