implementing example for sql connect in jupyter. And some text cleanup

--- a/src/exploration/exploring.ipynb
+++ b/src/exploration/exploring.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "4d0df13c-9bc8-4ad3-975f-85c7278a723a",
    "metadata": {
     "tags": []
@@ -20,7 +20,6 @@
     "import pandas as pd\n",
     "import os\n",
     "import numpy as np\n",
-    "import psycopg2\n",
     "# from sqlalchemy import create_engine, URL, MetaData\n",
     "# import scipy.io\n",
     "\n",
@@ -39,7 +38,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 72,
+   "id": "1204128a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    index  Year  Month  DayofMonth\n",
+      "0       0  2018      1          23\n",
+      "1       1  2018      1          24\n",
+      "2       2  2018      1          25\n",
+      "3       3  2018      1          26\n",
+      "4       4  2018      1          27\n",
+      "..    ...   ...    ...         ...\n",
+      "95     95  2018      1           6\n",
+      "96     96  2018      1          13\n",
+      "97     97  2018      1          14\n",
+      "98     98  2018      1          20\n",
+      "99     99  2018      1          27\n",
+      "\n",
+      "[100 rows x 4 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# testing sql connection\n",
+    "\n",
+    "\n",
+    "import psycopg2\n",
+    "\n",
+    "from dotenv import load_dotenv\n",
+    "from pathlib import Path\n",
+    "from sqlalchemy import create_engine\n",
+    "from sqlalchemy.sql import text\n",
+    "from sqlalchemy.engine.url import URL\n",
+    "\n",
+    "load_dotenv(Path.cwd() / \".env\")\n",
+    "server_creds = {\n",
+    "    \"drivername\": \"postgresql+psycopg2\",\n",
+    "    # \"host\": os.getenv(\"PG_HOST\"),\n",
+    "    \"host\": \"flights-db\",\n",
+    "    \"port\": os.getenv(\"PG_PORT\"),\n",
+    "    \"database\": os.getenv(\"PG_DATABASE\"),\n",
+    "    \"username\": os.getenv(\"PG_ADMIN\"),\n",
+    "    \"password\": os.getenv(\"PG_ADMIN_PASSWORD\"),\n",
+    "}\n",
+    "server_url = URL.create(**server_creds)\n",
+    "try:\n",
+    "    db = create_engine(server_url)\n",
+    "    query = \"SELECT * FROM flights LIMIT 10\"\n",
+    "    with db.connect() as conn:\n",
+    "        query = conn.execute(text(query))\n",
+    "        df = pd.DataFrame(query.fetchall())\n",
+    "except (Exception, psycopg2.DatabaseError) as error:\n",
+    "    print(error)\n",
+    "print(df)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "4807d8cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# unfortunately, %sql provided for ipython-sql is not working atm\n",
+    "# print(server_url)\n",
+    "# %sql postgresql://postgres:postgres@flights-db:5432/flights_db\n",
+    "# %sql"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "id": "49b11ff2",
    "metadata": {},
    "outputs": [
