--- a/src/exploration/frame_builder.ipynb
+++ b/src/exploration/frame_builder.ipynb
@@ -2,24 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<jemalloc>: MADV_DONTNEED does not work (memset will be used instead)\n",
-      "<jemalloc>: (This is the expected behaviour if you are running under QEMU)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Authors: Dan Blum, Matt Greene, Bram Zilzter\n",
     "#Dataset: https://www.kaggle.com/datasets/robikscube/flight-delay-dataset-20182022?select=readme.md\n",
     "\n",
     "import pandas as pd\n",
-    "import os"
+    "import os\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -42,7 +34,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def airlineAnalysis(frame):\n",
+    "    frame['Operating_Airline '].value_counts().plot(kind='barh').show()\n",
+    "    # plt.show();\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +73,30 @@
    "source": [
     "test_file = '/app/raw/Flights_2018_1.csv'\n",
     "test_frame = readfile(test_file)\n",
-    "print(test_frame.iloc[0])"
+    "print(test_frame.iloc[0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'matplotlib' has no attribute 'show'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[35], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m airlineAnalysis(test_frame)\n",
+      "Cell \u001b[0;32mIn[34], line 3\u001b[0m, in \u001b[0;36mairlineAnalysis\u001b[0;34m(frame)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mairlineAnalysis\u001b[39m(frame):\n\u001b[1;32m      2\u001b[0m     frame[\u001b[39m'\u001b[39m\u001b[39mOperating_Airline \u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mvalue_counts()\u001b[39m.\u001b[39mplot(kind\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mbarh\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m     plt\u001b[39m.\u001b[39;49mshow()\n",
+      "File \u001b[0;32m/mamba/lib/python3.11/site-packages/matplotlib/_api/__init__.py:226\u001b[0m, in \u001b[0;36mcaching_module_getattr.<locals>.__getattr__\u001b[0;34m(name)\u001b[0m\n\u001b[1;32m    224\u001b[0m \u001b[39mif\u001b[39;00m name \u001b[39min\u001b[39;00m props:\n\u001b[1;32m    225\u001b[0m     \u001b[39mreturn\u001b[39;00m props[name]\u001b[39m.\u001b[39m\u001b[39m__get__\u001b[39m(instance)\n\u001b[0;32m--> 226\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m(\n\u001b[1;32m    227\u001b[0m     \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mmodule \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mcls\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__module__\u001b[39m\u001b[39m!r}\u001b[39;00m\u001b[39m has no attribute \u001b[39m\u001b[39m{\u001b[39;00mname\u001b[39m!r}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'matplotlib' has no attribute 'show'"
+     ]
+    }
+   ],
+   "source": [
+    "airlineAnalysis(test_frame)"
    ]
   },
   {
