--- a/exploration/dan_explore.ipynb
+++ b/exploration/dan_explore.ipynb
@@ -28,6 +28,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'final_project.generate_sql'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mfinal_project\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mgenerate_sql\u001b[39;00m \u001b[39mimport\u001b[39;00m test_sql\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'final_project.generate_sql'"
+     ]
+    }
+   ],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
@@ -449,7 +470,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4
  },
