--- a/exploration/dan_explore.ipynb
+++ b/exploration/dan_explore.ipynb
@@ -2,8 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import glob\n",
@@ -28,23 +33,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'final_project.generate_sql'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mfinal_project\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mgenerate_sql\u001b[39;00m \u001b[39mimport\u001b[39;00m test_sql\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'final_project.generate_sql'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
      ]
     }
    ],
    "source": [
-    "\n"
+    "print(\"hello\")\n"
    ]
   },
   {
@@ -470,10 +473,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
-  },
-  "orig_nbformat": 4
+   "version": "3.10.11"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
